FIX bug on firefox nav.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3571,7 +3571,6 @@ header>.logo span img {
 
 #menu {
 	color: #FFF;
-	height: 100%;
 	display: inline-block;
 	max-width: 80%;
 	overflow-y: auto;
